[package]
name = "runic"
version = "0.1.0"
edition = "2021"

# [patch.crates-io]
# egui = { path = "../clone/egui/crates/egui" }

[lib]

[[example]]
name = "ex1"

[dependencies]
bevy_core = "0.14"
bevy_ecs = "0.14"
bitflags = "2.6.0"
# egui = { version = "0.28", features = ["callstack"] }
egui = "0.28"
glam = "0.27"
itertools = "0.13"
tracing = { version = "0.1", default-features = false, features = ["std"] }

[dev-dependencies]
bevy = { version = "0.14", default-features = false, features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_winit",
  "default_font",
  "multi_threaded",
  "png",
  "tonemapping_luts",
  "x11",
] }
bevy_egui = "0.28"
