[package]
name = "runic"
version = "0.1.0"
edition = "2021"

# [patch.crates-io]
# egui = { path = "../clone/egui/crates/egui" }

[lib]

[[example]]
name = "ex1"

[dependencies]
bevy_app = "0.14.1"
bevy_asset = "0.14.1"
bevy_core = "0.14.1"
bevy_ecs = "0.14.1"
bevy_egui = { version = "0.28", features = ["serde"] }
bevy_math = "0.14.1"
bevy_reflect = "0.14.1"
bevy_render = "0.14.1"
bitflags = { version = "2.6.0", features = ["serde"] }
itertools = "0.13"
serde = { version = "1", features = ["derive"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }

[dev-dependencies]
bevy = { version = "0.14", default-features = false, features = [
  "bevy_asset",
  "bevy_audio",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_state",
  "bevy_scene",
  "bevy_text",
  "bevy_ui",
  "bevy_winit",
  "default_font",
  "multi_threaded",
  "png",
  "tonemapping_luts",
  "vorbis",
  "x11",
] }
